# ormar-postgres-full-text

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
examples/basic_example/: main.py
examples/basic_example/db/: models.py
examples/basic_example/db/migrations/: env.py
examples/basic_example/db/migrations/versions/: f1fb9122d38a_.py
ormar_postgres_full_text/: field.py
