[tool.poetry]
name = "ormar-postgres-full-text"
version = "0.1.0"
description = "Extension to use full text search from postgresql in ormar ORM."
authors = ["Jegor Kitskerkin <jegor.kitskerkin@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "ormar_postgres_full_text"}]

[tool.poetry.dependencies]
python = "^3.9"
ormar = {version = "0.11.3", extras = ["postgresql"]}


[tool.poetry.group.dev.dependencies]
alembic = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
